added more styles and markup to tweet

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@11ty/eleventy": "^0.10.0-beta.1",
     "dotenv": "^8.2.0",
+    "moment": "^2.23.0",
     "request": "^2.88.0",
     "request-promise": "^4.2.5"
   }
