--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "dotenv": "^8.2.0",
     "html-minifier": "^4.0.0",
     "moment": "^2.23.0",
+    "nunjucks": "^3.2.0",
     "request": "^2.88.0",
     "request-promise": "^4.2.5"
   }
