--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "moment": "^2.23.0",
     "nunjucks": "^3.2.0",
     "request": "^2.88.0",
-    "request-promise": "^4.2.5"
+    "request-promise": "^4.2.5",
+    "string-replace-async": "^1.2.1"
   }
 }
